# DocSnap

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  app.py  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy.yml  test.yml
api/: [...path].py  config.py  index.py  logger.py  middleware.py  models.py  streaming.py  summarize.py
api/utils/: formatter.py  pdf_extractor.py  summarizer.py  usage_tracker.py
docs/: API.md  ARCHITECTURE.md
src/: App.css  App.tsx  main.tsx  types.ts
src/components/: ProcessingProgress.tsx
src/components/__tests__/: ProcessingProgress.test.tsx
src/hooks/: useStreamingSummarizer.ts
src/hooks/__tests__/: useStreamingSummarizer.test.ts
src/utils/: clipboard.ts  export.ts
src/utils/__tests__/: clipboard.test.ts  export.test.ts
tests/: conftest.py  test_api.py  test_formatter.py  test_pdf_extractor.py  test_summarizer.py
