[project]
name = "pdf-summarizer"
version = "1.0.0"
description = "PDF Document Summarizer with FastAPI and React"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.0",
    "python-multipart==0.0.6",
    "pdfplumber==0.10.3",
    "httpx>=0.25.0",
    "uvicorn==0.27.0",
    "python-dotenv==1.0.0",
    "structlog>=23.2.0",
    "pydantic-settings>=2.0.0",
    "slowapi>=0.1.9",
    "sse-starlette>=3.1.2",
    "sentry-sdk[fastapi]>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | dist
  | build
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults (FastAPI pattern)
    "B904",  # exception chaining (can be improved later)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, can tighten later
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=api --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"
